--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ url-pretty: "tierralibre.cc"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
+disqus: "tierralibre"
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: ""
