--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "https://tierralibre.cc"
+url: "https://tierralibre.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -73,7 +73,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "tierralibre.cc"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "tierralibre.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 
